Add: github actions related file and folders

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,8 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
+    line-height: 1.6;
+    font-size: 18px;
 }
 
 a {
@@ -24,6 +26,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 img {
